# openquality

./: .gitignore  AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: injected_anomalies.py  run_benchmark.sh
crates/openquality-auth/: Cargo.toml
crates/openquality-auth/src/: api_key.rs  jwt.rs  lib.rs  password.rs  rbac.rs
crates/openquality-cli/: Cargo.toml
crates/openquality-cli/src/: client.rs  main.rs  output.rs
crates/openquality-cli/src/commands/: data_sources.rs  health.rs  incidents.rs  integrations.rs  mod.rs  monitors.rs  workspaces.rs
crates/openquality-connections/: Cargo.toml
crates/openquality-connections/src/: bigquery.rs  lib.rs  postgres.rs  snowflake.rs  sources.rs
crates/openquality-core/: Cargo.toml
crates/openquality-core/src/: error.rs  lib.rs  profiler.rs  store.rs  suggest.rs  types.rs
crates/openquality-core/src/alert/: channel.rs  incident.rs  mod.rs
crates/openquality-core/src/expectation/: builtin.rs  mod.rs  runner.rs  suite.rs
crates/openquality-core/src/monitor/: correlation.rs  cost.rs  custom_sql.rs  distribution.rs  freshness.rs  ml_drift.rs  mod.rs  referential.rs  schema.rs  uniqueness.rs  volume.rs
crates/openquality-core/src/root_cause/: hints.rs  mod.rs
crates/openquality-core/src/stats/: chi_square.rs  iqr.rs  js_divergence.rs  ks_test.rs  mod.rs  threshold.rs  zscore.rs
crates/openquality-integrations/: Cargo.toml
crates/openquality-integrations/src/: airflow.rs  dbt.rs  ge.rs  lib.rs  lineage.rs
crates/openquality-mcp/: Cargo.toml
crates/openquality-mcp/src/: lib.rs  tools.rs
crates/openquality-python/: Cargo.toml
crates/openquality-python/src/: lib.rs
crates/openquality-scheduler/: Cargo.toml
crates/openquality-scheduler/src/: lib.rs
crates/openquality-server/: Cargo.toml
crates/openquality-server/src/: auth_extractor.rs  main.rs  state.rs
crates/openquality-server/src/routes/: auth.rs  data_sources.rs  health.rs  incidents.rs  integrations.rs  mcp.rs  mod.rs  monitors.rs  profiler.rs  suites.rs  users.rs  workspaces.rs
crates/openquality-store/: Cargo.toml
crates/openquality-store/src/: lib.rs  pg.rs
crates/openquality-store/src/migrations/: 001_init.sql
demo/: README.md  broken_pipeline.py  drift_detection.py
docs/: architecture.md  getting-started.md  monitors.md  openapi.json
python/: pyproject.toml
python/src/openquality/: __init__.py
python/src/openquality/alerting/: __init__.py  core.py
python/src/openquality/expectations/: __init__.py  core.py
python/src/openquality/monitors/: __init__.py  core.py
python/src/openquality/stats/: __init__.py  core.py
python/tests/: test_alerting.py  test_expectations.py  test_monitors.py  test_stats.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: ErrorBoundary.tsx  Layout.tsx  Loading.tsx  ProtectedRoute.tsx
web/src/hooks/: useApi.ts
web/src/pages/: Dashboard.tsx  DataSources.tsx  Incidents.tsx  Integrations.tsx  Login.tsx  Monitors.tsx  NotFound.tsx  Settings.tsx
