[workspace]
resolver = "2"
members = [
    "crates/openquality-core",
    "crates/openquality-python",
    "crates/openquality-mcp",
    "crates/openquality-server",
    "crates/openquality-cli",
    "crates/openquality-store",
    "crates/openquality-auth",
    "crates/openquality-connections",
    "crates/openquality-scheduler",
    "crates/openquality-integrations",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
arrow = { version = "57", features = ["prettyprint"] }
parquet = "57"
polars = "0.45"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
float-cmp = "0.9"
indicatif = "0.17"
csv = "1.3"
regex-lite = "0.1"
parking_lot = "0.12"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "chrono", "uuid", "json", "tls-rustls"] }
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
cron = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
