[package]
name = "openquality-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openquality-core = { path = "../openquality-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
hex.workspace = true
sha2.workspace = true
