[package]
name = "openquality-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arrow.workspace = true
parquet.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
rand_distr.workspace = true
float-cmp.workspace = true
csv.workspace = true
tracing.workspace = true
regex-lite.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
